--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/styles.css
@@ -28902,3 +28902,268 @@ h3 {
   top: 50%;
   transform: translateY(-50%);
 }
+
+/* line 1117, ../../../scss/_clix_styles.scss */
+.group_breadcumbs {
+  color: #fff;
+  display: block;
+  margin: 15px auto;
+  letter-spacing: 1px;
+}
+
+/* line 1124, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio {
+  margin: 0px;
+  height: 60px;
+}
+/* line 1127, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li {
+  display: inline-block;
+  height: 100%;
+}
+/* line 1130, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li > a {
+  color: #ce7869;
+  padding: 17px 12px 13px;
+  display: block;
+  border-bottom: 3px solid transparent;
+  font-size: 17px;
+  letter-spacing: 0.3px;
+}
+/* line 1138, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li > a.selected, ul.horizontal_tabs_gstudio > li > a:hover {
+  border-bottom: 3px solid #ffc14e;
+}
+/* line 1142, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li.sub_group_action {
+  position: relative;
+}
+/* line 1144, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li.sub_group_action > ul {
+  position: absolute;
+  top: 50px;
+  display: none;
+  z-index: 10;
+  position: cursor;
+  margin: 0px;
+  background: #fff;
+  box-shadow: 0px 1px 6px 1px #ccc;
+}
+/* line 1154, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li.sub_group_action > ul li {
+  list-style: none;
+  white-space: nowrap;
+  padding: 15px 15px;
+}
+/* line 1159, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li.sub_group_action > ul li:hover {
+  background: #d6f2fe;
+}
+/* line 1165, ../../../scss/_clix_styles.scss */
+ul.horizontal_tabs_gstudio > li.sub_group_action:hover ul {
+  display: block;
+}
+
+/* line 1174, ../../../scss/_clix_styles.scss */
+.group_content .group_banner {
+  height: 300px;
+  background: url("/static/ndf/images/course_backbround-1.png") no-repeat;
+  background-size: 100% 100%;
+}
+/* line 1179, ../../../scss/_clix_styles.scss */
+.group_content .group_header {
+  height: 80px;
+  padding: 20px;
+  background-color: #000;
+  color: #fff;
+}
+/* line 1184, ../../../scss/_clix_styles.scss */
+.group_content .group_header .group_title {
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 0.4px;
+}
+/* line 1189, ../../../scss/_clix_styles.scss */
+.group_content .group_header .group_actions > button {
+  display: inline-block;
+  margin: 7px 10px;
+}
+/* line 1194, ../../../scss/_clix_styles.scss */
+.group_content .group_sections {
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  background: #fff;
+}
+/* line 1199, ../../../scss/_clix_styles.scss */
+.group_content .group_sections_content {
+  min-height: 400px;
+  background-color: #fff;
+  padding-top: 20px;
+}
+
+/* line 1206, ../../../scss/_clix_styles.scss */
+.asset_tile {
+  margin-top: 10px;
+  padding-bottom: 10px;
+  border: 2px solid #eee;
+  cursor: pointer;
+}
+/* line 1212, ../../../scss/_clix_styles.scss */
+.asset_tile .asset_preview {
+  min-height: 200px;
+  background-color: #eee;
+}
+/* line 1217, ../../../scss/_clix_styles.scss */
+.asset_tile .asset_text {
+  padding: 2px 10px;
+}
+/* line 1219, ../../../scss/_clix_styles.scss */
+.asset_tile .asset_text .asset_title {
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  font-weight: 600;
+}
+/* line 1224, ../../../scss/_clix_styles.scss */
+.asset_tile .asset_text .asset_desc {
+  font-size: 13px;
+  letter-spacing: 0.3px;
+}
+
+/* line 1232, ../../../scss/_clix_styles.scss */
+.preview_asset {
+  background: #ccc;
+  border: 2px solid #999;
+  width: 100%;
+  min-height: 350px;
+}
+
+/*Custom css*/
+/* line 1241, ../../../scss/_clix_styles.scss */
+.add_more_files {
+  color: #aaa;
+  font-size: 14px;
+  letter-spacing: 0.6px;
+}
+
+/* line 1247, ../../../scss/_clix_styles.scss */
+input[type="text"], input[type="file"] {
+  margin: 0px;
+}
+
+/* line 1250, ../../../scss/_clix_styles.scss */
+label {
+  margin-top: 1rem;
+}
+
+/* line 1255, ../../../scss/_clix_styles.scss */
+input[type="file"]::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+/* line 1258, ../../../scss/_clix_styles.scss */
+input[type="file"]:before {
+  content: 'Select files';
+  display: inline-block;
+  border: 1px solid #999;
+  border-radius: 5px;
+  padding: 8px 10px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 10pt;
+  color: #cc7769;
+  border-color: #cc7769;
+  float: right;
+}
+
+/* line 1274, ../../../scss/_clix_styles.scss */
+input[type="file"] {
+  padding: 5px;
+  margin-top: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+/* line 1281, ../../../scss/_clix_styles.scss */
+.button-hollow-white {
+  background: inherit;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 0.9px;
+  padding: 3px 10px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: color 1s ease, border-color 1s ease;
+  -webkit-transition: color 1s ease, border-color 1s ease;
+}
+
+/* line 1294, ../../../scss/_clix_styles.scss */
+.orange-button {
+  color: #ce7869;
+  padding: 8px 15px;
+  background: #fff;
+  border: 2px solid #aaa;
+  font-size: 14px;
+}
+
+/* line 1302, ../../../scss/_clix_styles.scss */
+.icons-medium {
+  font-size: 23px;
+  line-height: 23px;
+  vertical-align: sub;
+}
+
+/* line 1307, ../../../scss/_clix_styles.scss */
+.icons-large {
+  font-size: 45px;
+  line-height: 45px;
+}
+
+/* line 1312, ../../../scss/_clix_styles.scss */
+.round-icon {
+  border-radius: 100%;
+  height: 20px;
+  font-size: 15px;
+  padding: 2px 5px;
+}
+
+/* line 1318, ../../../scss/_clix_styles.scss */
+.hide {
+  display: none !important;
+}
+
+/* line 1321, ../../../scss/_clix_styles.scss */
+.badge {
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  border-radius: 100%;
+  line-height: 21px;
+  text-align: center;
+  font-size: 15px;
+}
+/* line 1330, ../../../scss/_clix_styles.scss */
+.badge.badge-blue {
+  background-color: #acd4fa;
+  color: #fff;
+}
+
+/* line 1336, ../../../scss/_clix_styles.scss */
+#menu_bar_gstudio .user-profile-pic-small {
+  height: 46px;
+  width: 46px;
+  margin: 0px 10px;
+}
+/* line 1342, ../../../scss/_clix_styles.scss */
+#menu_bar_gstudio .loggedin-user {
+  background: #505e6c;
+  border-radius: 100%;
+  height: 45px;
+  width: 45px;
+  display: inline-block;
+  margin: 5px 5px 0px 5px;
+}
