--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -1,4 +1,3 @@
-
 {% load ndf_tags %}
 {% load i18n %}
 {% load cache %}
@@ -6,6 +5,7 @@
 {% get_group_name groupid as group_name_tag %}
 {% get_site_variables as site %}
 {% get_oid_variables as oids %}
+{% user_access_policy groupid request.user as user_access %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,12 +14,25 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no; width=device-width" />
+  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width" />
+  <!-- added by saurabh -->
+    <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation-icon-fonts/foundation-icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
+    <script type="text/javascript" src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
+    <script type="text/javascript" src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
+    <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js">
+      
+    </script>
 
+  
   <link rel="shortcut icon" href="{{site.FAVICON}}">
 
-  <!-- External library stylesheets-->
   <!-- Foundation 5 - Responsive CSS Framework http://foundation.zurb.com/docs/css.html-->
+    <script src="/static/ndf/js/MediaStreamRecorder.js"></script> 
+  <script src="/static/ndf/js/adapter.js"></script>
   <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css">
   <link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/styles.css">
 
@@ -29,24 +42,21 @@
   <!-- font-awesome icons -->
   <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.min.css">
 
-  <!--link href='https://fonts.googleapis.com/css?family=Rubik:400,300,500,700,900' rel='stylesheet' type='text/css'-->
-  <!-- <link href='https://fonts.googleapis.com/css?family=Asap:700,400' rel='stylesheet' type='text/css'> -->
-
   <!-- Handle bar for templating purpose -->
-  <script src="/static/ndf/bower_components/handlebars/handlebars.min.js"></script>
+  <!-- <script src="/static/ndf/bower_components/handlebars/handlebars.min.js"></script> -->
 
   <!-- Modernizr - Browser detection JS http://modernizr.com/ -->
   <script src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
 
   <!-- jQuery -->
   <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script>
-  <script src="/static/ndf/bower_components/jquery-ui/jquery-ui.min.js"></script>
+
+  <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script>  
 
   <!-- Enable HTML5 on old browsers -->
   <!--[if lte IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-
+  <!-- External library stylesheets-->
   <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %} </title>
 
   {% block head %}{% endblock %}
@@ -64,10 +74,9 @@
   {% get_group_object groupid as group_object %}
   {% check_accounts_url request.path as is_ac_url %}
 
-  {% include "ndf/gheader.html" %}
+  {% include "ndf/header_clix.html" %}
   {% block extended_header %}{% endblock %}
-
-  {% comment %}
+   {% comment %}
    {% get_gstudio_help_sidebar as gst_help_sidebar %}
    {% if gst_help_sidebar and app or app_description%}
 
@@ -76,14 +85,14 @@
         <div class="help-button-text">
           Help
         </div>
+
       </a>
       <div class="mainContainer">
              {{ app.content_org }}
       </div>
     </div>
    {% endif %}
-  {% endcomment %}
-
+   {% endcomment %}
   <div class="workspace">
     <div class="off-canvas-wrap" data-offcanvas>
       <div class="inner-wrap">
@@ -100,6 +109,7 @@
 
         <main class="row">
           <!-- Start of sidebar section (main aside) -->
+          <!-- <aside class="medium-2 columns"> -->
           <aside class='medium-{% firstof first_body_column 2 %} columns'>
             <div>
               <header>
@@ -109,6 +119,7 @@
 
               <!-- Meta content in the (main aside header)-->
               <section>
+                <!--div style="padding-top:1.3rem;"-->
                 <div>
                   {% block collection_content %}  {% endblock %}
                 </div>
@@ -126,7 +137,8 @@
           <!-- End of related content -->
 
           <!-- Start of content section -->
-          <article class="medium{% firstof first_body_column|default_if_none:'2'|safe|add:'-12' %} columns">
+          <!-- <article class="medium-10 columns"> -->
+          <article class="medium{% firstof first_body_column|default_if_none:'2'|safe|add:'-12' %} columns" style="padding: 0px;">
             <!-- The actual body content -->
             <!-- Url redirection -->
 
@@ -181,7 +193,6 @@
     // Register global ajax start and complete events to show ajax loader when request is in process
       $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
       /*
-
       $(document)
         .ajaxStart(function() {
           $('article').block({
@@ -192,20 +203,24 @@
               border: 'none',
               padding: '15px',
               color: '#fff !important',
-              backgroundColor: '#10c1cb !important',
+              // backgroundColor: '#10c1cb !important',
               '-webkit-border-radius': '10px',
               '-moz-border-radius': '10px',
               opacity: 1.0,
-              top: ($(window).height())/2 + 'px',
+              top: ($(window).height())/2 + 'px', left: '', right: '50px',
               left: $(window).width()/2 + 'px',
               transform: 'translate( -50%, -50%)'
             }
           });
         })
+        .ajaxComplete(function(){
+          $('article').unblock();
+        })
         .ajaxStop(function() {
           $('article').unblock();
         });
         */
+
     // Toggles the display of main sidebar for 12 col article view
       var toggleMainSidebar = function(){
         $("main>aside").toggle();
@@ -286,19 +301,6 @@
         // var url = "/{{group_id}}/ajax/get_resource_by_oid/" + oid;
 
         if (!oid) {return};
-
-        $.ajax({
-          url: "{% url 'get_resource_by_oid' group_name_tag %}",
-          type: 'GET',
-          data: {'oid': oid},
-          success: function(data){
-            console.log(data);
-            var dataObj = JSON.parse(data),
-              name = dataObj.altnames?dataObj.altnames:dataObj.name;
-            $('#overlay-description-by-oid-title').html('<h3 class="text-center">' + name + '</h3>');
-            $('#overlay-description-by-oid-content').html(dataObj.content);
-          }
-        });
 
       });
 
