--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/breadcrumb.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/breadcrumb.html
@@ -4,21 +4,15 @@
 {% get_site_name_from_settings as site_name %}
 
 {% if path and not site_name == 'NROER' %}
-
-	<ul class="breadcrumbs">
-		{% for each_br in path %}
-			
-			{% if forloop.last %} 
-				<li class="current">
-					<a href="#"> {{each_br.name}} </a>
-				</li>
-			{% else %}
-				<li>
-					<a href="{{each_br.link}}"> {{each_br.name}} </a>
-				</li>
-			{% endif %}
-
-		{% endfor %}
-	</ul>
-
+<div class="group_breadcumbs row">
+    {% for each_br in path %}
+        <div class="small-12 columns row">
+			{% if forloop.last %}
+	            <span><b><a href="#"> {{each_br.name}} </a></b></span>&nbsp;&gt;&nbsp;&nbsp;
+        	{% else %}
+	            <span><a href="{{each_br.link}}"> {{each_br.name}} </a></span> &nbsp;&gt;
+        	{% endif %}
+        </div>
+    {% endfor %}
+</div>
 {% endif %}
