--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_2017.html
@@ -1,16 +1,13 @@
 {% load simple_filters %}
 {% load check_is_gstaff from ndf_tags %}
-{% xextends "ndf/base.html" with first_body_column=0 %}
+{% xextends "ndf/gbase.html" with first_body_column=0 %}
 
 {% load i18n %}
 
-
 {% block title %} {{title|capfirst}} {% endblock title %}
-
 
 {% block body_content %}
 	{% check_is_gstaff groupid request.user as is_gstaff %}
-
 	<div class="row explore-header">
 		<div class="small-12 medium-2 columns heading"><a href="{% url 'explore' %}">Explore</a></div>
 		<div class="small-12 medium-3 columns expore-type">
@@ -26,51 +23,34 @@
 						Base Course
 					</a>
 				{% endif %}
-
-
-
 			</div>
-		{% comment %}
-		<div class="medium-3 columns explore-search small-12">
-			<input type="text" placeholder="Search">
 		</div>
-		<div class="small-3 columns {%if title == 'courses'%}label info{% endif %}">
-			<a href="{% url 'explore_courses' %}">Courses</a>
-		</div>
-
-		<div class="small-3 columns {% if title == 'groups' %}label info{% endif %}">
-			<a href="{% url 'explore_groups' %}">Groups</a>
-		</div>
-		{% endcomment %}
-	</div>
-	{% if title == "base courses" and is_gstaff %}
+		{% if title == "base courses" and is_gstaff %}
 		<div class="small-12 medium-7 columns">
 			<div style="display: inline-block;">
-					<a class="tiny button radius right" href="{% url 'create_edit' groupid %}"><i class="fi-plus"></i>{% trans " Create Course" %}</a>
+				<a class="tiny button radius right" href="{% url 'create_edit' groupid %}"><i class="fi-plus"></i>{% trans " Create Course" %}</a>
 			</div>
 		</div>
-	{% endif %}
-
-
-	{% if title == 'explore' %}
-		Please select course or a group.
-	{% else %}
-		<section role="tabpanel" aria-hidden="true" class="content active small-block-grid-1 medium-block-grid-3 large-block-grid-4" style="background-color:#fafafa;border-style:none">
-			{% for each_obj in doc_cur %}
-				<li class="card-image-wrapper" style="margin-top:13px;">
-				{% if title == "base courses" %}
-					{% if "Course" in each_obj.member_of_names_list %}
-						{% include card with resource=each_obj has_logo=True no_footer=True url_name="course_detail" first_arg=groupid second_arg=each_obj.pk  %}
-					{% elif "BaseCourseGroup" in each_obj.member_of_names_list %}
-						{% include card with resource=each_obj has_logo=True no_footer=True url_name="groupchange" first_arg=each_obj.pk  %}
-					{% endif %}
+		{% endif %}
+	</div>
+	<div class="row">
+		{% if title == 'explore' %}
+			Please select course or a group.
+		{% else %}
+		<!--section role="tabpanel" aria-hidden="true" class="content active " style="border-style:none;"-->
+		{% for each_obj in doc_cur %}
+			<!--li class="card-image-wrapper"-->
+			{% if title == "base courses" %}
+				{% if "Course" in each_obj.member_of_names_list %}						{% include card with resource=each_obj has_logo=True no_footer=True url_name="course_detail" first_arg=groupid second_arg=each_obj.pk  %}
+				{% elif "BaseCourseGroup" in each_obj.member_of_names_list %}
+					{% include card with resource=each_obj has_logo=True no_footer=True url_name="groupchange" first_arg=each_obj.pk  %}
+				{% endif %}
 				{% else %}
 					{% include card with resource=each_obj is_event=True no_footer=True has_prof_pic=True url_name="groupchange" first_arg=each_obj.pk  next_session=True %}
 				{% endif %}
-	          </li>
+	          <!--/li-->
 			{% endfor %}
-			
-		</section>
+		<!--/section-->
 			{% if title == "courses" %}
 				{% include 'ndf/pagination.html' with urlname="courses_paged" first_arg="" second_arg=""  third_arg="" page_info=ce_page_cur %}
 			{% elif title == "base courses"  %}
@@ -79,7 +59,4 @@
 				{% include 'ndf/pagination.html' with urlname="groups_paged" first_arg="" second_arg=""  third_arg="" page_info=ce_page_cur %}
 			{% endif %}
 	{% endif %}
-
-
-
 {% endblock body_content %}
