--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -9,8 +9,7 @@
 {% block title %}{% trans 'Events' %} {% endblock %}
 
 {% block body_content %}
-  <link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/curriculum.css">
-
+{% get_breadcrumb request.path %}
     <div class="row group_content">
         <div class="small-12 columns">
             <div class="row">
