--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -128,6 +128,7 @@
           </section>
     </nav>
     <script type="text/javascript">
+        $(document).foundation();
         $(function(){
             $('.top-bar .toggle-topbar').on('click', function() {
                 $('.top-bar').find('.close-menu-dropdown, .side-bar-button').toggleClass('hide');
