--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -433,3 +433,147 @@ input[type="file"] {
   border: 2px solid #aaa;
   font-size: 14px;
 }
+
+/* line 445, ../../../scss/_clix2017.scss */
+.blue-white-button {
+  color: #fff;
+  background: #a2d0e0;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+/* line 452, ../../../scss/_clix2017.scss */
+.button-small {
+  padding: 1px 5px;
+}
+
+/* Create Curriculum */
+/* line 457, ../../../scss/_clix2017.scss */
+ul.jqtree_common {
+  position: relative;
+}
+/* line 459, ../../../scss/_clix2017.scss */
+ul.jqtree_common:before {
+  content: '';
+  border-width: 0px 0px 1px 1px;
+  position: absolute;
+  left: 9px;
+  border-style: dashed;
+  border-color: #ccc;
+  top: 12px;
+  height: calc(100% - 27px);
+  width: 16px;
+}
+
+/*li.jqtree-folder {
+    position: relative;
+    &:before {
+        content: '';
+        border-width: 1px 0px 0px 0px;
+        position: absolute;
+        height: 0px;
+        left: 7px;
+        border-style: dashed;
+        border-color: #ccc;
+        top: 12px;
+        width: 15px;
+    }
+}*/
+/* line 486, ../../../scss/_clix2017.scss */
+ul:not(:only-child) li:first-child {
+  position: relative;
+}
+/* line 488, ../../../scss/_clix2017.scss */
+ul:not(:only-child) li:first-child:before {
+  content: '';
+  border-width: 1px 0px 0px 0px;
+  position: absolute;
+  height: 0px;
+  left: -22px;
+  border-style: dashed;
+  border-color: #ccc;
+  top: 12px;
+  width: 30px;
+}
+
+/* line 500, ../../../scss/_clix2017.scss */
+.jqtree_common .jqtree-element:not(.leaf_node):not(:only-child), .jqtree_common .jqtree-element.leaf_node {
+  position: relative;
+}
+/* line 502, ../../../scss/_clix2017.scss */
+.jqtree_common .jqtree-element:not(.leaf_node):not(:only-child):before, .jqtree_common .jqtree-element.leaf_node:before {
+  content: '';
+  border-width: 1px 0px 0px 0px;
+  position: absolute;
+  height: 0px;
+  left: 12px;
+  border-style: dashed;
+  border-color: #ccc;
+  top: 12px;
+  width: 10px;
+}
+
+/* line 515, ../../../scss/_clix2017.scss */
+ul.jqtree-tree .jqtree-element {
+  margin-top: 15px;
+}
+
+/* line 519, ../../../scss/_clix2017.scss */
+ul.jqtree-tree ul.jqtree_common {
+  margin-left: 35px;
+}
+
+/* line 523, ../../../scss/_clix2017.scss */
+ul.jqtree-tree li.jqtree-selected > .jqtree-element, ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
+  background: transparent;
+}
+
+/* line 527, ../../../scss/_clix2017.scss */
+ul.jqtree-tree .jqtree-toggler {
+  color: #aaa;
+}
+/* line 529, ../../../scss/_clix2017.scss */
+ul.jqtree-tree .jqtree-toggler:hover {
+  color: #aaa;
+}
+
+/* line 534, ../../../scss/_clix2017.scss */
+.curriculum_creator {
+  background: #fff;
+  box-shadow: 0px 2px 6px #000;
+  margin: 20px auto;
+  padding: 0px 0px;
+  min-height: calc(100vh - 100px);
+  overflow-y: auto;
+  padding: 15px;
+}
+
+/* line 543, ../../../scss/_clix2017.scss */
+.curriculum_creator_header {
+  width: 100%;
+  height: 60px;
+  background: #fff;
+  padding: 5px 15px;
+  box-shadow: 1px 0px 13px #000;
+}
+/* line 550, ../../../scss/_clix2017.scss */
+.curriculum_creator_header .course_heading span {
+  letter-spacing: 0.9px;
+  font-weight: 600;
+  line-height: 50px;
+  font-size: 25px;
+}
+/* line 558, ../../../scss/_clix2017.scss */
+.curriculum_creator_header .course_actions ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 12px;
+  color: #999999;
+  cursor: pointer;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+}
+/* line 567, ../../../scss/_clix2017.scss */
+.curriculum_creator_header .course_actions ul li.active, .curriculum_creator_header .course_actions ul li:hover {
+  border-bottom: 3px solid #ffc14e;
+}
