--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -441,3 +441,133 @@ input[type="file"] {
     border: 2px solid #aaa;
     font-size: 14px;
 }
+
+.blue-white-button {
+    color: #fff;
+    background: #a2d0e0;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+.button-small {
+    padding: 1px 5px;
+}
+
+/* Create Curriculum */
+ul.jqtree_common  {
+    position: relative;
+      &:before {
+        content: '';
+        border-width: 0px 0px 1px 1px;
+        position: absolute;
+        left: 9px;
+        border-style: dashed;
+        border-color: #ccc;
+        top: 12px;
+        height: calc(100% - 27px);
+        width: 16px;
+    }
+}
+/*li.jqtree-folder {
+    position: relative;
+    &:before {
+        content: '';
+        border-width: 1px 0px 0px 0px;
+        position: absolute;
+        height: 0px;
+        left: 7px;
+        border-style: dashed;
+        border-color: #ccc;
+        top: 12px;
+        width: 15px;
+    }
+}*/
+
+ul:not(:only-child) li:first-child {
+    position: relative;
+    &:before {
+        content: '';
+        border-width: 1px 0px 0px 0px;
+        position: absolute;
+        height: 0px;
+        left: -22px;
+        border-style: dashed;
+        border-color: #ccc;
+        top: 12px;
+        width: 30px;
+    }
+}
+.jqtree_common .jqtree-element:not(.leaf_node):not(:only-child), .jqtree_common .jqtree-element.leaf_node {
+    position: relative;
+    &:before {
+        content: '';
+        border-width: 1px 0px 0px 0px;
+        position: absolute;
+        height: 0px;
+        left: 12px;
+        border-style: dashed;
+        border-color: #ccc;
+        top: 12px;
+        width: 10px;
+    }
+}
+
+ul.jqtree-tree .jqtree-element {
+    margin-top: 15px;
+}
+
+ul.jqtree-tree ul.jqtree_common {
+    margin-left: 35px;
+}
+
+ul.jqtree-tree li.jqtree-selected > .jqtree-element, ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
+    background: transparent;
+}
+
+ul.jqtree-tree .jqtree-toggler {
+    color: #aaa;
+    &:hover {
+        color: #aaa;
+    }
+}
+
+.curriculum_creator {
+    background: #fff;
+    box-shadow: 0px 2px 6px #000;
+    margin: 20px auto;
+    padding: 0px 0px;
+    min-height: calc(100vh - 100px);
+    overflow-y: auto;
+    padding: 15px;
+}
+.curriculum_creator_header {
+    width: 100%;
+    height: 60px;
+    background: #fff;
+    padding: 5px 15px;
+    box-shadow: 1px 0px 13px #000;
+
+    .course_heading span{
+        letter-spacing: 0.9px;
+        font-weight: 600;
+        line-height: 50px;
+        font-size: 25px;
+    }
+
+    .course_actions {
+        ul li {
+            list-style-type: none;
+            display: inline-block;
+            padding: 12px;
+            color: #999999;
+            cursor: pointer;
+            font-size: 18px;
+            letter-spacing: 0.8px;
+
+            &.active, &:hover {
+                border-bottom: 3px solid $secondary-orange;
+            }
+        }
+
+    }
+}
